--- a/src/styles/settings/common.scss
+++ b/src/styles/settings/common.scss
@@ -212,6 +212,12 @@ button {
 .list--line{
   position: relative;
   padding-bottom: 50px;
+  @include rm(1024) {
+    padding-bottom: 70px;
+  }
+  @include rm(1220) {
+    padding-bottom: 90px;
+  }
 
   &::after {
     position: absolute;
@@ -226,18 +232,21 @@ button {
 
 .title--line {
   position: relative;
-  padding-bottom: 55px;
-}
+  padding-bottom: 50px;
+  @include rm(768) {
+    padding-bottom: 60px;
+  }
 
-.title--line::after {
-  position: absolute;
-  content: '';
-  width: 270px;
-  height: 34px;
-  bottom: 0;
-  left: calc(50% - 135px);
-  background: url(../img/line__gradient.png) no-repeat center center;
-  background-size: contain;
+  &::after {
+    position: absolute;
+    content: '';
+    width: 270px;
+    height: 34px;
+    bottom: 0;
+    left: calc(50% - 135px);
+    background: url(../img/line__gradient.png) no-repeat center center;
+    background-size: contain;
+  }
 }
 
 .header__text {
