--- a/src/templates/components/stop.pug
+++ b/src/templates/components/stop.pug
@@ -3,27 +3,30 @@ section.stop.block
     h2.stop--title.title До разработки 
       span.text__orange Трауфрила
     h3.stop--subtitle.subtitle.title--line существовало только 
-      span.stop--big_yellow 3 
-      | способа остановить грыжу и предотвратить риск осложнений
+      span.stop--big_yellow.black 3 
+      | способа <br> остановить грыжу и предотвратить риск осложнений
     ul.stop--list.list--line
       li.stop--item 
         img.stop--img(src="img/stop__01.jpg", alt="image", loading="lazy")
-        h3.stop--header
-          sapn.bg--line.bg--line__grey Оперировать — 
-          span.text__orange опасно и дорого
-        p.stop--text Приводит к осложнениям в 40% случаев и к рецидиву в 80% случаев. Есть противопоказания по состоянию здоровья и возрасту.
+        .spot--text_wrapper
+          h3.stop--header
+            sapn.bg--line.bg--line__grey Оперировать — 
+            span.text__orange опасно и дорого
+          p.stop--text Приводит к осложнениям в 40% случаев и к рецидиву в 80% случаев. Есть противопоказания по состоянию здоровья и возрасту.
       li.stop--item
         img.stop--img(src="img/stop__02.jpg", alt="image", loading="lazy")
-        h3.stop--header
-          sapn.bg--line.bg--line__grey Вправить — 
-          span.text__orange опасно
-        p.stop--text В 50% случаев приводит к воспалению и нарушению целостности органа, который выпадает и как результат - к необходимости оперативного вмешательства.
+        .spot--text_wrapper
+          h3.stop--header
+            sapn.bg--line.bg--line__grey Вправить — 
+            span.text__orange опасно
+          p.stop--text В 50% случаев приводит к воспалению и нарушению целостности органа, который выпадает и как результат - к необходимости оперативного вмешательства.
       li.stop--item
         img.stop--img(src="img/stop__03.jpg", alt="image", loading="lazy")
-        h3.stop--header
-          sapn.bg--line.bg--line__grey Жить с грыжей — 
-          span.text__orange опасно
-        p.stop--text Поскольку вы будете жить с постоянным риском ущемления грыжи, болью и дискомфортом.
+        .spot--text_wrapper
+          h3.stop--header
+            sapn.bg--line.bg--line__grey Жить с грыжей — 
+            span.text__orange опасно
+          p.stop--text Поскольку вы будете жить с постоянным риском ущемления грыжи, болью и дискомфортом.
     p.stop--bottom.stop--bottom__big Теперь для вас доступен 
       span.text__orange Трауфрил 
       | — новый метод лечения,
