--- a/src/styles/components/stop.scss
+++ b/src/styles/components/stop.scss
@@ -6,24 +6,97 @@
 
   &--subtitle {
     margin-bottom: 20px;
+
+    @include rm(1024) {
+      margin-bottom: 30px;
+    }
+    @include rm(1220) {
+      margin-bottom: 40px;
+    }
+
+    br {
+      display: none;
+      @include rm(1024) {
+        display: inline-block;
+      }
+    }
+  }
+
+  &--big_yellow {
+    font-size: 29px;
+    color: #f9da63;
+    line-height: 1;
+    @include rm(640) {
+      font-size: 32px;
+    }
+    @include rm(768) {
+      font-size: 38px;
+    }
+    @include rm(1024) {
+      font-size: 46px;
+    }
+    @include rm(1220) {
+      font-size: 52px;
+    }
   }
 
   &--list {
     margin-bottom: 30px;
+    @include rm(1024) {
+      display: flex;
+      align-items: flex-start;
+      justify-content: space-between;
+    }
   }
 
   &--item {
     max-width: 370px;
     margin: 0 auto;
+    
+    @include rm(640) {
+      max-width: 100%;
+      display: flex;
+      align-items: center;
+      border: none;
+    }
+    @include rm(1024) {
+      max-width: 370px;
+      width: 32%;
+      margin: 0;
+      padding: 0;
+      flex-direction: column;
+    }
 
     &:not(:last-child) {
+      padding-bottom: 20px;
       margin-bottom: 20px;
+      border-bottom: 1px solid $orange-color;
+      @include rm(1024) {
+        margin: 0;
+        padding: 0;
+        border: none;
+      }
     }
   }
 
   &--img {
-    margin-bottom: 10px;
+    max-width: 300px;
+    margin: 0 auto 10px;
     border-radius: 15px;
+    @include rm(640) {
+      max-width: 330px;
+      margin: 0 10px 0 0;
+    }
+    @include rm(768) {
+      max-width: 370px;
+    }
+    @include rm(1024) {
+      max-width: 100%;
+      margin-bottom: 30px;
+    }
+  }
+
+  &--text_wrapper {
   }
 
   &--header {
@@ -31,15 +104,43 @@
     color: $black-color;
     font-weight: 900;
     font-size: 22px;
+    text-align: center;
+    @include rm(640) {
+      text-align: left;
+    }
+    @include rm(768) {
+      font-size: 24px;
+    }
+    @include rm(1024) {
+      min-height: 56px;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+    @include rm(1220) {
+      min-height: auto;
+      margin-bottom: 30px;
+      text-align: left;
+    }
 
     .text__orange {
       position: relative;
       z-index: 2;
+      display: inline-block;
     }
   }
 
   &--text {
     color: $grey-text-color;
+    text-align: center;
+    @include rm(640) {
+      text-align: left;
+    }
+    @include rm(1024) {
+      text-align: center;
+    }
+    @include rm(1220) {
+      text-align: left;
+    }
   }
 
   &--bottom {
@@ -49,9 +150,24 @@
 
     &__big {
       font-size: 22px;
+      @include rm(640) {
+        font-size: 24px;
+      }
+      @include rm(768) {
+        font-size: 28px;
+      }
+      @include rm(1024) {
+        font-size: 32px;
+      }
     }
     &__small {
       font-size: 16px;
+      @include rm(640) {
+        font-size: 18px;
+      }
+      @include rm(1024) {
+        font-size: 22px;
+      }
     }
   }
 }
