--- a/src/styles/components/composition.scss
+++ b/src/styles/components/composition.scss
@@ -2,50 +2,163 @@
 
   &--title {
     margin-bottom: 15px;
+    @include rm(1024) {
+      margin-bottom: 30px;
+    }
+    @include rm(1220) {
+      margin-bottom: 40px;
+    }
+    br {
+      display: none;
+      @include rm(1220) {
+        display: inline-block;
+      }
+    }
   }
 
+  &--wrapper__main {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-bottom: 20px;
+    @include rm(640) {
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+    }
+    @include rm(1220) {
+      margin-bottom: 50px;
+    }
+  }
+
+  // &--wrapper__right {
+  // }
+
   &--wrapper__left {
-    margin-bottom: 15px;
+    @include rm(640) {
+      min-width: 280px;
+    }
+    @include rm(768) {
+      min-width: 315px;
+    }
+    @include rm(1024) {
+      min-width: 400px;
+    }
+    @include rm(1220) {
+      position: relative;
+      min-width: 470px;
+    }
   }
 
   &--prod {
     margin: 0 auto;
+    @include rm(1220) {
+      position: absolute;
+      max-width: 524px;
+      left: -40px;
+      top: calc(50% - 162px);
+    }
   }
 
   &--list {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
+    @include rm(640) {
+      margin: 0;
+    }
+    @include rm(1220) {
+      width: 670px;
+    }
   }
 
   &--item {
+    position: relative;
     display: flex;
+    padding-left: 70px;
+    @include rm(1024) {
+      padding: 15px 10px 15px 90px;
+    }
+    @include rm(1220) {
+      padding: 30px 0 20px 120px;
+    }
 
     &:not(:last-child) {
       margin-bottom: 15px;
+      @include rm(1220) {
+        margin-bottom: 25px;
+      }
     }
 
     &:first-child .composition--img {
-      width: 75px;
-      margin-left: -5px;
+      width: 65px;
+      left: -5px;
+      // margin: 0 10px 0 -5px;
+      
+      @include rm(1024) {
+        width: 115px;
+        top: 20px;
+        left: -35px;
+        // margin: 0 10px 0 -35px;
+      }
+      @include rm(1220) {
+        width: 145px;
+        left: -45px;
+        top: 10px;
+      }
+    }
+    &:nth-child(2) .composition--img {
+      @include rm(1220) {
+        width: 108px;
+        top: 5px;
+      }
+    }
+    
+    &:nth-child(3) .composition--img {
+      @include rm(1220) {
+        width: 100px;
+        top: 0px;
+      }
     }
 
-    picture {
-      flex-shrink: 0;
+    // picture {
+    //   flex-shrink: 0;
+    // }
+  }
+  &--text_wrapper {
+    @include rm(1024) {
+      display: flex;
+      align-items: center;
+      // flex-grow: 1;
     }
   }
 
   &--img {
-    width: 70px;
-    flex-shrink: 0;
-    margin-right: 10px;
+    position: absolute;
+    width: 50px;
+    top: 0;
+    left: 10px;
+    // flex-shrink: 0;
+    // margin: 0 10px;
+    @include rm(1024) {
+      width: 80px;
+      left: 0;
+    }
   }
 
   &--header {
     color: $black-color;
     font-weight: 900;
+    @include rm(1024) {
+      flex-shrink: 0;
+      width: 160px;
+      margin-right: 15px;
+      font-size: 22px;
+    }
   }
 
   &--text {
     font-size: 16px;
+    @include rm(1024) {
+      font-size: 18px;
+    }
   }
 
   &--button {
